fixed product and dark mode theme

--- a/src/assets/scss/components/message-wrapper.scss
+++ b/src/assets/scss/components/message-wrapper.scss
@@ -280,6 +280,11 @@
       max-width: 100%;
       flex: 1;
 
+      display: flex;
+      flex-direction: column;
+      max-width: fit-content;
+      gap: 16px;
+
       .chat-msg-profile {
         display: none;
       }
