--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 $fontFamily: 'Raleway', sans-serif;
 
 .theme-light {
@@ -40,7 +41,8 @@ $fontFamily: 'Raleway', sans-serif;
   );
   --white: #fff;
   --action-highlighting-color: rgba(119, 48, 144, calc(0.4 + .24));
-  --action-bg-color: #686b75
+  --action-bg-color: #D0D7DF;
+  --action-text-color:  #1B1B1B;
 }
 
 .theme-dark {
@@ -65,7 +67,8 @@ $fontFamily: 'Raleway', sans-serif;
   --input-chat-color: #6f7073;
   --detail-font-color: var(--input-chat-color);
   --action-highlighting-color: rgba(119, 48, 144, calc(0.4 + .24));
-  --action-bg-color: hsla(284.8192771084337, 49.74418604651163%, 37.59803921568628%, .4)
+  --action-bg-color: hsla(284.8192771084337, 49.74418604651163%, 37.59803921568628%, .4);
+  --action-text-color:  #fff;
 }
 
 [data-theme="purple"] {
